@@ -2,6 +2,7 @@
 package ai.vespa.validation;
 
 import java.nio.file.Path;
+import java.util.Locale;
 
 /**
  * Path validations
@@ -18,7 +19,7 @@ public class PathValidator {
      */
     public static void validateChildOf(Path root, Path path) {
         if (!path.normalize().startsWith(root)) {
-            throw new IllegalArgumentException("Invalid path %s".formatted(path));
+            throw new IllegalArgumentException(String.format(Locale.ROOT, "Invalid path %s", path));
         }
     }
 
